RISC-V: AlignVector is mistakenly set to AvoidUnalignedAccesses

XMLWordPrintable

    • b17
    • riscv
    • linux

        According to the latest RISC-V linux hardware probing syscall [1], the performance of misaligned memory accesses
        has been divided into two cases: RISCV_HWPROBE_KEY_MISALIGNED_SCALAR_PERF and RISCV_HWPROBE_KEY_MISALIGNED_VECTOR_PERF
        for scalar and vector respectively. And RISCV_HWPROBE_KEY_CPUPERF_0 is deprecated and it now returns similar values
        to RISCV_HWPROBE_KEY_MISALIGNED_SCALAR_PERF.

        Previously, we use RISCV_HWPROBE_KEY_CPUPERF_0 to detect support for misaligned memory accesses and reflect the result
        on VM flags like AvoidUnalignedAccesses, UseUnalignedAccesses and AlignVector. But it doesn't seem correct to update
        AlignVector according to this value. And this is causing issues on hardwares which have fast misaligned accesses only
        for scalar. I see they will trigger SIGBUG error in the case of vector misaligned accesses.

        [1] https://docs.kernel.org/arch/riscv/hwprobe.html

              Assignee:
              Fei Yang
              Reporter:
              Fei Yang
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: