8368366: RISC-V: AlignVector is mistakenly set to AvoidUnalignedAccesses

Reviewed-by: fjiang, rehn, mli